@@ -3,6 +3,8 @@ ddetect (1.05) UNRELEASED; urgency=low
   * Joey Hess
     - Add usb nic modules to the manual module list. Closes: #262638, #267402
     - Hack to make this work for 2.4 which does not have a usb/nic subdir.
+    - In ethdetect, don't prompt twice for module params in a low priority
+      install.
 
  -- Joey Hess <joeyh@debian.org>  Mon,  6 Sep 2004 17:15:48 -0400
 
